<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/text_size_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
    </Toolbar>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/avatar"
        android:layout_width="86dp"
        android:layout_height="86dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_standard"
        android:src="@drawable/bill"/>


    <LinearLayout
        android:id="@+id/llPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/llFollowers"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:layout_marginEnd="@dimen/margin_extra_small"
        android:layout_marginStart="@dimen/margin_standard">

        <TextView
            android:id="@+id/tvPostCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard"
            android:text="16"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/posts"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFollowers"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/llPost"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/llFollowing"
        android:layout_marginStart="@dimen/margin_extra_small">

        <TextView
            android:id="@+id/tvFollowersCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/followerscount"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvFollowersTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/followers"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFollowing"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/llFollowers"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_extra_small">

        <TextView
            android:id="@+id/tvFollowingCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/followingcount"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvFollowingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/following"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="Билл Гейтс"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard" />

    <TextView
        android:id="@+id/tvBiography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="28.11.1955\nСША, Вашингтон \nГарвардский университет \nПредприниматель"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_extra_small" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvBiography"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/edit"
        android:textSize="@dimen/text_size_standard"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_standard"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:spanCount="3"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_marginTop="@dimen/margin_small"/>
    
    <ProgressBar
        android:id="@+id/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>